# defiant-core

./: BUILD.gn  DEPS  README.md  brave_paks.gni  package-lock.json  package.json  tsconfig.json
app/: app_management_strings.grdp  bookmarks_strings.grdp  brave_command_ids.h  brave_exe.ver  brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  brave_strings.grd  brave_strings_override.grd  components_brave_strings.grd  extensions_strings.grdp  extensions_strings_override.grdp  file_manager_strings.grdp  generated_resources.grd  generated_resources_override.grd  md_extensions_strings.grdp  media_router_strings.grdp  nux_strings.grdp  onboarding_welcome_strings.grdp  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  printing_strings.grdp  profiles_strings.grdp  settings_brave_strings.grdp  settings_brave_strings_override.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp  shared_settings_strings_override.grdp  supervised_user_error_page_strings.grdp  vr_strings.grdp  web_time_limit_error_page_strings.grdp  welcome_strings.grdp  xr_consent_ui_strings.grdp
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_stats_updater.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  update_util.cc
common/: BUILD.gn  brave_paths.cc  brave_switches.cc  network_constants.cc  network_constants.h  url_constants.cc  url_constants.h
components/: autofill_assistant_strings.grdp  autofill_payments_strings.grdp  autofill_strings.grdp  browsing_data_strings.grdp  components_brave_strings.grd  components_strings.grd  error_page_strings.grdp  find_in_page_strings.grdp  flags_strings.grdp  history_strings.grdp  management_strings.grdp  new_or_sad_tab_strings.grdp  new_or_sad_tab_strings_override.grdp  ntp_snippets_strings.grdp  ntp_tiles_strings.grdp  omnibox_strings.grdp  omnibox_strings_override.grdp  page_info_strings.grdp  password_manager_strings.grdp  payments_strings.grdp  (+9 more)
components/brave_referrals/browser/: BUILD.gn  brave_referrals_service.cc
components/dissenter_extension/: BUILD.gn
components/dissenter_extension/extension/: resources.grd
components/dissenter_extension/extension/dissenter_extension/: BUILD.gn  manifest.json
components/dissenter_extension/extension/dissenter_extension/background/: background.html  background.js
components/dissenter_extension/extension/dissenter_extension/content/all/script/: script.js
components/dissenter_extension/extension/dissenter_extension/content/reddit/script/: script.js
components/dissenter_extension/extension/dissenter_extension/content/twitter/script/: script.js
components/dissenter_extension/extension/dissenter_extension/content/wikipedia/script/: script.js
components/dissenter_extension/extension/dissenter_extension/content/youtube/script/: script.js
components/dissenter_extension/extension/dissenter_extension/newtab/: newtab.css  newtab.html  newtab.js
components/dissenter_extension/extension/dissenter_extension/options/: options.css  options.html  options.js
components/dissenter_extension/extension/dissenter_extension/popup/: popup.css  popup.html  popup.js
(+909 files in other folders)
